<resources>
    <string name="app_name">Anju UTS PAM</string>
    <string name="greetings">Welcome To Gamer App</string>
    <string name="app_title">SocGamer</string>
    <string name="app_desc">Find your gaming friends</string>
    <string name="back"> Back</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="label_user">Username: </string>
    <string name="hint_user">Input your username</string>
    <string name="label_password">Password: </string>
    <string name="hint_pass">Input your password</string>
    <string name="hint_nim">Input your NIM</string>
    <string name="label_nim">NIM :</string>
    <string name="profile_name">Anju Rodo Oldo Yosafat</string>

    <string name="no_account">Dont have account? Click Here</string>
    <string name="have_account">Already have account? Click Here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="greetings_dashboard">Welcome to Dashboard</string>
    <string name="greetings_profile">Welcome to Profile</string>
    <string name="logout">Logout</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="homenav">Home</string>
    <string name="profilenav">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>