<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_normal">
    <TextView
        android:id="@+id/fromlogin_toafter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="@dimen/normal_3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="@dimen/title_h4"
        android:padding="@dimen/padding_small"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_user"
        android:textSize="@dimen/normal_2"
        />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/hint_user"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textSize="@dimen/normal_2"
        />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/hint_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/submit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_small"
        android:text="@string/login_button"
        android:textSize="@dimen/normal_2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/fromlogin_toregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_marginTop="@dimen/normal_2"
        android:textSize="@dimen/normal_3"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>